tests/cases_invalid/statements/.expected
error: undefined identifier
 --> ./cases_invalid/statements/unknown_var_ident.shd:6:21
  |
6 |     var var_value = missing;
  |                     ^^^^^^^
  |

error: undefined identifier
 --> ./cases_invalid/statements/unknown_var_ident.shd:7:17
  |
7 |     var_value = missing;
  |                 ^^^^^^^
  |

error: undefined identifier
 --> ./cases_invalid/statements/unknown_var_ident.shd:8:17
  |
8 |     var_value = unused_value;
  |                 ^^^^^^^^^^^^
  |

error: undefined identifier
 --> ./cases_invalid/statements/unknown_var_ident.shd:9:5
  |
9 |     missing = 10;
  |     ^^^^^^^
  |

error: invalid expression type
 --> ./cases_invalid/statements/invalid_assigned_type.shd:9:20
  |
9 |     assigned_var = imported;
  |     ------------   ^^^^^^^^
  |     |              |
  |     |              expression type is `bool`
  |     info: expected type is `i32`
  |

error: invalid expression type
  --> ./cases_invalid/statements/invalid_assigned_type.shd:10:20
   |
10 |     assigned_var = 1.0;
   |     ------------   ^^^
   |     |              |
   |     |              expression type is `f32`
   |     info: expected type is `i32`
   |

error: invalid expression type
  --> ./cases_invalid/statements/invalid_assigned_type.shd:11:20
   |
11 |     assigned_var = buf_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `bool`
   |     info: expected type is `i32`
   |

error: invalid expression type
  --> ./cases_invalid/statements/invalid_assigned_type.shd:12:20
   |
12 |     assigned_var = var_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `u32`
   |     info: expected type is `i32`
   |

error: invalid expression type
  --> ./cases_invalid/statements/invalid_assigned_type.shd:13:20
   |
13 |     assigned_buf = 1.0;
   |     ------------   ^^^
   |     |              |
   |     |              expression type is `f32`
   |     info: expected type is `i32`
   |

error: invalid expression type
  --> ./cases_invalid/statements/invalid_assigned_type.shd:14:20
   |
14 |     assigned_buf = buf_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `bool`
   |     info: expected type is `i32`
   |

error: invalid expression type
  --> ./cases_invalid/statements/invalid_assigned_type.shd:15:20
   |
15 |     assigned_buf = var_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `u32`
   |     info: expected type is `i32`
   |